# toydb

./: .gitignore  Cargo.toml  README.org  build.rs
demo/: create_db.sh  create_table.sh  init.sh  insert.sh  projection.sh  select.sh
schema/: btree.capnp  items.capnp
src/: Lang.org  Lang.tex  error.rs  items.proto  lib.rs  main.rs  owned_items.rs  result.rs
src/cmd/: main.rs
src/engine/: buffer_pool.rs  catalogue.rs  heap.rs  index.rs  iterator.rs  mod.rs
src/engine/cmd/: ddl.rs  dml.rs  mod.rs
src/engine/index/: mem_tree.rs  mod.rs  tree.rs
src/rpc/: ddl.rs  dml.rs  mod.rs
src/types/: db.rs  mod.rs  table.rs
src/util/: fs.rs  mod.rs  rid.rs
