[package]
name = "toydb"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-v2 = "0.13.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix = "0.13.1"
tokio = { version = "1.34.0", features = ["fs"] }
xdg = "2.5.2"
futures = "0.3.29"
prost = "0.12"
bytes = "1.5.0"
future-utils = "0.12.1"
serde = "1.0.193"

[build-dependencies]
prost-build = "0.12.3"