[package]
name = "toydb"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-v2 = "0.13.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix = "0.13.1"
tokio = { version = "1.34.0", features = ["fs"] }
xdg = "2.5.2"
futures = "0.3.29"
prost = "0.12"
bytes = "1.5.0"
future-utils = "0.12.1"
serde = "1.0.193"
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-appender = "0.2.3"
rand = "0.8.5"
tracing-test = "0.2.4"
serde_json = "1.0.108"
sqlparser = "0.40.0"

[build-dependencies]
prost-build = "0.12.3"